--- a/Individual-Project/templates/cakes.html
+++ b/Individual-Project/templates/cakes.html
@@ -18,105 +18,140 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
+
               <li class="nav-item active">
-                <a class="nav-link" href="/cart">cart <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="/cakes">cakes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/coursd-cakes">coursed cakes</a>
+                <a class="nav-link" href="/csd.cakes">coursed cakes</a>
               </li>
             </ul>
         </div>
     </nav> 
 
 
-
-    <div class="flex-container" >
-
     <style>
+
+        body {
+            background-image: url("static/bgpic.jpg") !important;
+        }
+
         .flex-container {
-              display: flex !important;;
-              flex-wrap: wrap !important;;
-            }
-        .flex-container {
-              display: flex !important;;
-              flex-wrap: wrap !important;;
+            display: flex !important;
+            flex-direction: row !important;
+            flex-wrap: wrap !important;
 
             }
 
         .flex-container .card {
-              width: 100px !important;;
-              margin: 100px !important;;
+            background-color: rgb(255,196,214);
+            border-radius: 3px;
+            margin: 5px;
+            /*padding: 10px;*/
+            width: 10px;
+            font-size: 20px;
+            text-align: center;
+            line-height: 10x;
+            opacity: 95%;
+            box-shadow: 0 4px 8px 0 rgb(255,250,250);
+
 
             }
+        .cakeCard {
+            width: 200px;
+            height: 230px;
+            margin-left: auto;
+            margin-right: auto;
+            padding-top: 10px;
+        }
+
+        .card-title{
+            font-family:"Times New Roman", Times, serif;
+            font-weight: bold;
+            color: whitesmoke;
+            font-size: 30px;
+        }
+        .card-text{
+            font-family:"Times New Roman", Times, serif;
+            font-style: italic;
+            color: white;
+            op]opacity: 90%;
+            font-size: 20px;
+
+        }
+
+        .navbar {
+            color: hotpink;
+        }
+
+
+
+
+            
     </style> 
 
-      <!-- cake1-->  
-        <div class="card" style="width: 18rem;">
-            <img class="cakeCard" src="static/cakes/cake1.jpg" alt="Card image cap" id="cake1">
-        <div class="col" class="card-body">
-            <h3 class="card-title" id="title1" >Strawberry Cake</h3>
-            <h5 class="card-text" id="des1"> 50$ </h5>
-        </div>
+        <div class="flex-container">
 
-      <!-- cake2-->  
-        <div class="card" style="width: 18rem;">
-            <img class="cakeCard" src="static/cakes/cake2.jpeg" alt="Card image cap" id="cake1">
-        <div class="col" class="card-body">
-            <h3 class="card-title" id="title1" >flower Cake</h3>
-            <h5 class="card-text" id="des1"> 30$ </h5>
-        </div>
+          <!-- cake1-->  
+            <div class="card" style="width: 18rem;">
+                <img class="cakeCard" src="static/cakes/cake1.jpg" alt="Card image cap" id="cake1">
+                <h3 class="card-title" id="title1" >Dino Cake</h3>
+                <h5 class="card-text" id="des1"> 5,000$ </h5>
+            </div>
 
-              <!-- cake3-->  
-        <div class="card" style="width: 18rem;">
-            <img class="cakeCard" src="static/cakes/cake3.jpg" alt="Card image cap" id="cake1">
-        <div class="col" class="card-body">
-            <h3 class="card-title" id="title1" >chocolate Cake</h3>
-            <h5 class="card-text" id="des1"> 70$ </h5>
-        </div>
+          <!-- cake2-->  
+            <div class="card" style="width: 18rem;">
+                <img class="cakeCard" src="static/cakes/cake2.jpeg" alt="Card image cap" id="cake1">
+                <h3 class="card-title" id="title1" >Flower Cake</h3>
+                <h5 class="card-text" id="des1"> 3,999.99$ </h5>
+            </div>
 
-      <!-- cake4-->  
-        <div class="card" style="width: 18rem;">
-            <img class="cakeCard" src="static/cakes/cake4.jpg" alt="Card image cap" id="cake1">
-        <div class="col" class="card-body">
-            <h3 class="card-title" id="title1" >panda Cake</h3>
-            <h5 class="card-text" id="des1"> 80$ </h5>
-        </div>
+                  <!-- cake3-->  
+            <div class="card" style="width: 18rem;">
+                <img class="cakeCard" src="static/cakes/cake3.jpg" alt="Card image cap" id="cake1">
+                <h3 class="card-title" id="title1" >Heart Cake</h3>
+                <h5 class="card-text" id="des1"> 70$ </h5>
+            </div>
+
+          <!-- cake4-->  
+            <div class="card" style="width: 18rem;">
+                <img class="cakeCard" src="static/cakes/cake4.jpg" alt="Card image cap" id="cake1">
+                <h3 class="card-title" id="title1" >Lemon Cake</h3>
+                <h5 class="card-text" id="des1"> 800$ </h5>
+            </div>
+
+            <br/>
 
 
-      <!-- cake5-->  
-        <div class="card" style="width: 18rem;">
-            <img class="cakeCard" src="static/cakes/cake5.jpeg" alt="Card image cap" id="cake1">
-        <div class="col" class="card-body">
-            <h3 class="card-title" id="title1" > another Strawberry Cake</h3>
-            <h5 class="card-text" id="des1"> 100$ </h5>
-        </div>
-              <!-- cake6-->  
-        <div class="card" style="width: 18rem;">
-            <img class="cakeCard" src="static/cakes/cake6.jpg" alt="Card image cap" id="cake1">
-        <div class="col" class="card-body">
-            <h3 class="card-title" id="title1" > another Strawberry Cake</h3>
-            <h5 class="card-text" id="des1"> 100$ </h5>
-        </div>
+          <!-- cake5-->  
+            <div class="card" style="width: 18rem;">
+                <img class="cakeCard" src="static/cakes/cake5.jpeg" alt="Card image cap" id="cake1">
+                <h3 class="card-title" id="title1" >Strawberry Cake</h3>
+                <h5 class="card-text" id="des1"> 1,000$ </h5>
+            </div>
 
-              <!-- cake7-->  
-        <div class="card" style="width: 18rem;">
-            <img class="cakeCard" src="static/cakes/cake7.jpg" alt="Card image cap" id="cake1">
-        <div class="col" class="card-body">
-            <h3 class="card-title" id="title1" > another Strawberry Cake</h3>
-            <h5 class="card-text" id="des1"> 100$ </h5>
-        </div>
+        <!-- cake6-->  
+            <div class="card" style="width: 18rem;">
+                <img class="cakeCard" src="static/cakes/cake6.jpg" alt="Card image cap" id="cake1">
+                <h3 class="card-title" id="title1" > Heart Strawberry Cake</h3>
+                <h5 class="card-text" id="des1"> 678$ </h5>
+            </div>
 
-              <!-- cake8-->  
-        <div class="card" style="width: 18rem;">
-            <img class="cakeCard" src="static/cakes/cake8.jpg" alt="Card image cap" id="cake1">
-        <div class="col" class="card-body">
-            <h3 class="card-title" id="title1" > another Strawberry Cake</h3>
-            <h5 class="card-text" id="des1"> 100$ </h5>
+        <!-- cake7-->  
+            <div class="card" style="width: 18rem;">
+                <img class="cakeCard" src="static/cakes/cake7.jpg" alt="Card image cap" id="cake1">
+                <h3 class="card-title" id="title1" >Blueberry Cake</h3>
+                <h5 class="card-text" id="des1"> 900,99$ </h5>
+            </div>
+
+        <!-- cake8-->  
+            <div class="card" style="width: 18rem;">
+                <img class="cakeCard" src="static/cakes/cake8.jpg" alt="Card image cap" id="cake1">
+                <h3 class="card-title" id="title1" > Crimson Cake</h3>
+                <h5 class="card-text" id="des1"> 300,000 </h5>
+            </div>
         </div>
-    </div>
+    
     
 
 
