--- a/Individual-Project/templates/coursed_cakes.html
+++ b/Individual-Project/templates/coursed_cakes.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="static/css/style.css">
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>GaliCake</title>
+    <title>home</title>
 </head>
 
-
 <body>
+
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">GaliCake</a>
@@ -18,94 +18,147 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
+
               <li class="nav-item active">
-                <a class="nav-link" href="/cart">cart <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="/cakes">cakes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/coursd-cakes">coursed cakes</a>
+                <a class="nav-link" href="/csd.cakes">coursed cakes</a>
               </li>
             </ul>
         </div>
     </nav> 
 
 
+    <style>
 
-   <div class="flex-container"> 
+        body {
+            background-image: url("static/bgpic.jpg") !important;
+        }
 
-      <!-- cake1-->  
-        <div class="card" style="width: 18rem;">
-            <img class="cakeCard" src="static/cakes2/1.jpg" alt="Card image cap" id="cake1">
-        <div class="col" class="card-body">
-            <h3 class="card-title" id="title1" >Strawberry Cake</h3>
-            <h5 class="card-text" id="des1"> 50$ </h5>
+        .flex-container {
+            display: flex !important;
+            flex-direction: row !important;
+            flex-wrap: wrap !important;
+
+            }
+
+        .flex-container .card {
+            background-color: lightpink;
+            margin: 5px;
+            /*padding: 10px;*/
+            width: 10px;
+            font-size: 20px;
+            text-align: center;
+            line-height: 10x;
+            opacity: 95%;
+
+
+            }
+        .cakeCard {
+            width: 200px;
+            height: 230px;
+            margin-left: auto;
+            margin-right: auto;
+            padding-top: 10px;
+        }
+
+        .card-title{
+            font-family:"Times New Roman", Times, serif;
+            font-weight: bold;
+            color: whitesmoke;
+            font-size: 30px;
+        }
+        .card-text{
+            font-family:"Times New Roman", Times, serif;
+            font-style: italic;
+            color: white;
+            op]opacity: 90%;
+            font-size: 20px;
+
+        }
+
+
+
+
+            
+    </style> 
+
+        <div class="flex-container">
+
+          <!-- cake1-->  
+            <div class="card" style="width: 18rem;">
+                <img class="cakeCard" src="static/cakes2/1.jpg" alt="Card image cap" id="cake1">
+                <h3 class="card-title" id="title1" >Birthday Cake</h3>
+                <h5 class="card-text" id="des1"> 50,897,387.00$ </h5>
+            </div>
+
+          <!-- cake2-->  
+            <div class="card" style="width: 18rem;">
+                <img class="cakeCard" src="static/cakes2/2.jpg" alt="Card image cap" id="cake1">
+                <h3 class="card-title" id="title1" >Mother Day Cake</h3>
+                <h5 class="card-text" id="des1"> 9.99$ </h5>
+            </div>
+
+                  <!-- cake3-->  
+            <div class="card" style="width: 18rem;">
+                <img class="cakeCard" src="static/cakes2/3.jpg" alt="Card image cap" id="cake1">
+                <h3 class="card-title" id="title1" >Frog Cake</h3>
+                <h5 class="card-text" id="des1"> 700$ </h5>
+            </div>
+
+          <!-- cake4-->  
+            <div class="card" style="width: 18rem;">
+                <img class="cakeCard" src="static/cakes2/4.jpg" alt="Card image cap" id="cake1">
+                <h3 class="card-title" id="title1" >For your Bestie</h3>
+                <h5 class="card-text" id="des1"> 8,890$ </h5>
+            </div>
+
+            <br/>
+
+
+          <!-- cake5-->  
+            <div class="card" style="width: 18rem;">
+                <img class="cakeCard" src="static/cakes2/5.jpg" alt="Card image cap" id="cake1">
+                <h3 class="card-title" id="title1" > SUS</h3>
+                <h5 class="card-text" id="des1"> 100,000,000$ </h5>
+            </div>
+
+        <!-- cake6-->  
+            <div class="card" style="width: 18rem;">
+                <img class="cakeCard" src="static/cakes2/6.jpg" alt="Card image cap" id="cake1">
+                <h3 class="card-title" id="title1" > Olaf Cake</h3>
+                <h5 class="card-text" id="des1"> 100$ </h5>
+            </div>
+
+        <!-- cake7-->  
+            <div class="card" style="width: 18rem;">
+                <img class="cakeCard" src="static/cakes2/7.jpg" alt="Card image cap" id="cake1">
+                <h3 class="card-title" id="title1" > ed SHEERAN </h3>
+                <h5 class="card-text" id="des1"> 0$ </h5>
+            </div>
+
+        <!-- cake8-->  
+            <div class="card" style="width: 18rem;">
+                <img class="cakeCard" src="static/cakes2/8.jpg" alt="Card image cap" id="cake1">
+                <h3 class="card-title" id="title1" > Weeze Cake</h3>
+                <h5 class="card-text" id="des1"> 340$ </h5>
+            </div>
         </div>
-
-      <!-- cake2-->  
-        <div class="card" style="width: 18rem;">
-            <img class="cakeCard" src="static/cakes2/2.jpg" alt="Card image cap" id="cake1">
-        <div class="col" class="card-body">
-            <h3 class="card-title" id="title1" >flower Cake</h3>
-            <h5 class="card-text" id="des1"> 30$ </h5>
-        </div>
-
-              <!-- cake3-->  
-        <div class="card" style="width: 18rem;">
-            <img class="cakeCard" src="static/cakes2/3.jpg" alt="Card image cap" id="cake1">
-        <div class="col" class="card-body">
-            <h3 class="card-title" id="title1" >chocolate Cake</h3>
-            <h5 class="card-text" id="des1"> 70$ </h5>
-        </div>
-
-      <!-- cake4-->  
-        <div class="card" style="width: 18rem;">
-            <img class="cakeCard" src="static/cakes2/4.jpg" alt="Card image cap" id="cake1">
-        <div class="col" class="card-body">
-            <h3 class="card-title" id="title1" >panda Cake</h3>
-            <h5 class="card-text" id="des1"> 80$ </h5>
-        </div>
+    
+    
 
 
-      <!-- cake5-->  
-        <div class="card" style="width: 18rem;">
-            <img class="cakeCard" src="static/cakes2/5.jpg" alt="Card image cap" id="cake1">
-        <div class="col" class="card-body">
-            <h3 class="card-title" id="title1" > another Strawberry Cake</h3>
-            <h5 class="card-text" id="des1"> 100$ </h5>
-        </div>
-              <!-- cake6-->  
-        <div class="card" style="width: 18rem;">
-            <img class="cakeCard" src="static/cakes2/6.jpg" alt="Card image cap" id="cake1">
-        <div class="col" class="card-body">
-            <h3 class="card-title" id="title1" > another Strawberry Cake</h3>
-            <h5 class="card-text" id="des1"> 100$ </h5>
-        </div>
 
-              <!-- cake7-->  
-        <div class="card" style="width: 18rem;">
-            <img class="cakeCard" src="static/cakes2/7.jpg" alt="Card image cap" id="cake1">
-        <div class="col" class="card-body">
-            <h3 class="card-title" id="title1" > another Strawberry Cake</h3>
-            <h5 class="card-text" id="des1"> 100$ </h5>
-        </div>
 
-              <!-- cake8-->  
-        <div class="card" style="width: 18rem;">
-            <img class="cakeCard" src="static/cakes2/8.jpg" alt="Card image cap" id="cake1">
-        <div class="col" class="card-body">
-            <h3 class="card-title" id="title1" > another Strawberry Cake</h3>
-            <h5 class="card-text" id="des1"> 100$ </h5>
-        </div>
-    </div>
+
+
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+
 </body>
-
-
 </html>
