--- a/Individual-Project/templates/home.html
+++ b/Individual-Project/templates/home.html
@@ -2,15 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="static/css/style.css" rel="stylesheet"  />
+    <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>home</title>
+    <title>GaliCake</title>
 </head>
 
 
 <body>
 
-    <div class = "container">
+    <style>
+        
+
+        body {
+            background-image: url("static/bgpic.jpg") !important;
+        }
+
+        .tales {
+            max-width: 100% !important;
+            max-height: 70% !important;
+        }
+
+        .btn {
+            background-color: hotpink;
+            position: absolute;
+            top: 850px;
+            left: 430px;
+            border: none;
+            color: white;
+            padding: 40px 30px;
+            text-align: center;
+            font-size: 30px;
+            margin: 4px 2px;
+            opacity: 1;
+            transition: 0.3s;
+        }
+        .btn1 {
+            background-color: hotpink;
+            position: absolute;
+            top: 850px;
+            left: 600px;
+            border: none;
+            color: white;
+            padding: 40px 30px;
+            text-align: center;
+            font-size: 30px;
+            margin: 4px 2px;
+            opacity: 1;
+            transition: 0.3s;
+
+        }
+
+
+        .btn:hover {opacity: 0.6} 
+        .btn1:hover {opacity: 0.6}    
+
+
+    </style>
+
+
+    <div class = "container tales">
         <div class ="row">
             <div class = "col-sm-12">
 
@@ -18,18 +68,18 @@
 
 
                 <!-- wrappers for slides -->
-                    <div class = "carousel-inner" role="listbox"  class= "tales">
+                    <div class = "carousel-inner" role="listbox">
 
                         <div class ="carousel-item active">
-                        <img src="static/pink.jpg" class="img-fluid" alt="Responsive image">
+                            <img src="static/c1.jpg" class="img-fluid" alt="Responsive image">
                         </div>
 
                         <div class = "carousel-item">
-                        <img src="static/yellow.jpg" class="img-fluid" alt="yellow">
+                            <img src="static/c2.jpg" class="img-fluid" alt="yellow" >
                         </div>
 
                         <div class = "carousel-item">
-                        <img src="static/blue.jpg" class="img-fluid" alt="blue">
+                            <img src="static/c3.jpg" class="img-fluid" alt="blue">
                         </div>
 
                     </div>
@@ -37,6 +87,7 @@
             </div>
         </div>
     </div>
+
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">GaliCake</a>
@@ -47,33 +98,37 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="/cart">cart <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/cakes">cakes <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/cakes">cakes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/coursed.cakes">coursed cakes</a>
+                <a class="nav-link" href="/csd.cakes">cursed cakes</a>
               </li>
             </ul>
         </div>
-    </nav> 
+    </nav>
 
-        <br/>
+        
+    <br/>
 
+    <br/>
 
-    <a href="/cakes">
-        <button>cakes</button>
-    </a>
-    <a href="/coursed.cakes">
-        <button>coursed cakes</button>
-    </a>
+            <a href="/cakes">
+                <button class="btn">cakes</button>
+            </a>
+
+            <a href="/csd.cakes">
+                <button class="btn1">surprise</button>
+            </a>
+
+ 
+
 
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
 
 
