--- a/Individual-Project/templates/signin.html
+++ b/Individual-Project/templates/signin.html
@@ -17,18 +17,22 @@
                 <div class="card shadow-2-strong" style="border-radius: 1rem;">
                     <div class="card-body p-5 text-center">
 
-                        <form method="post" action="/">
+                        <form method="post" action="/signin">
 
                             <h3 class="mb-5">Sign in</h3>
 
                             <div class="form-outline mb-4">
-                              <input type="email" id="emailStr" class="form-control form-control-lg" />
-                              <label class="form-label" >Email</label>
+                                <input type="email" id="emailStr" class="form-control form-control-lg" name="email" />
+                                <label class="form-label" >Email</label>
                             </div>
 
                             <div class="form-outline mb-4">
-                              <input type="password" id="password" class="form-control form-control-lg" />
-                              <label class="form-label">Password</label>
+                                <input type="password" id="password" class="form-control form-control-lg" name="password" />
+                                <label class="form-label">Password</label>
+                            </div>
+
+                            <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                                <button type="submit" class="btn btn-light btn-lg">submit</button>
                             </div>
                         </form>
 
@@ -42,28 +46,6 @@
     </div>
 </section>
 
-<!--     <form method="post" action="/">
-
-        <div>
-            <label>Email address*</label>
-            <div>
-                <input type="email"  name="email" id="emailStr" required>
-            </div>
-        </div>
-
-         Password 
-        <div>
-            <label>Password*</label>
-            <div class="input-group">
-                <input type="password"  name="password" minlength="6">
-            </div>
-        </div>
-
-
-        <div>
-            <input type="submit"/>
-        </div>
-    </form> -->
 
 
 
