--- a/Individual-Project/templates/signup.html
+++ b/Individual-Project/templates/signup.html
@@ -44,7 +44,7 @@
 
 
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button type="submit" class="btn btn-light btn-lg">submit</button>
+                    <button type="submit" class="btn btn-light btn-lg">Submit</button>
                   </div>
 
                 </form>
